<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="Add_Reminder">Add reminder</string>
    <string name="Event_Name"> Event: </string>
    <string name="DayOfEvent">Day </string>
    <string name="TimeofEvent">Time </string>
    <string name="SaveReminder">Save Reminder </string>
    <string name="Calendar">Calendar</string>
    <string name="Today">"Today's" Events</string>
    <string name="Month">Month</string>
    <string name="Year">Year</string>
    <string name="title_activity_hamburger_icon">hamburger_icon</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


</resources>
