<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >


    <EditText
        android:id="@+id/editText8"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Year"
        tools:layout_editor_absoluteX="231dp"
        tools:layout_editor_absoluteY="206dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="132dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Month"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="206dp" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="92dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/DayOfEvent"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="206dp" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Today"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="25dp" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="486dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="-45dp"
        tools:layout_editor_absoluteY="223dp" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/TimeofEvent"
        tools:layout_editor_absoluteX="287dp"
        tools:layout_editor_absoluteY="260dp" />


    <EditText
        android:id="@+id/editText13"
        android:layout_width="297dp"
        android:layout_height="104dp"
        android:layout_gravity="bottom|end"
        android:ems="10"
        android:gravity="bottom"
        android:inputType="textPersonName"
        android:rotation="-90"
        android:saveEnabled="false"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="356dp" />

    <EditText
        android:id="@+id/editText14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Event_Name"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="275dp" />

    <EditText
        android:id="@+id/editText15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Event_Name"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="368dp" />

    <EditText
        android:id="@+id/editText16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Event_Name"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="480dp" />


</android.support.constraint.ConstraintLayout>